Fix resizing image from compare service